# smenu

./: .clang-format  .indent.pro  COPYRIGHT  ChangeLog  FAQ  INTERNALS.rst  LICENSE  LICENSE.rst  Makefile  Makefile.am  Makefile.in  README.rst  SUMMARY  TODO  aclocal.m4  build.sh  config.h.in  configure  configure.ac  ctxopt.c  ctxopt.h  darray.c  darray.h  fgetc.c  fgetc.h  getopt.c  getopt.h  index.c  index.h  ini.c  ini.h  list.c  list.h  ptrlist.c  ptrlist.h  safe.c  safe.h  smenu.1  smenu.c  smenu.h  (+11 more)
build-aux/: config.guess  config.sub
examples/lvm_menu/: README  lvm_menu.sh  menu.sh
examples/simple_menu/: README  actions.sh  main.mnu  simple_menu.sh  sub1.mnu  sub2.mnu
examples/yesno/: README  yesno.sh
tests/: README.rst  test.sh  tests.sh
tests/alignments/: data1  data2  data3  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst  t0009.good  t0009.tst  t0010.good  t0010.in  t0010.tst
tests/attributes/: data1  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst  t0009.good  t0009.tst
tests/auto-completion/: data1  data2  data3  data4  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst
tests/center_window/: t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst
tests/column_mode/: data2  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst
tests/direct_access/: data1  data2  data3  data4  data5  data6  data8  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst  t0009.good  t0009.tst  t0010.good  t0010.tst  t0011.good  t0011.tst  t0012.good  t0012.tst  t0013.good  t0013.tst  t0014.good  t0014.tst  t0015.good  t0015.in  t0015.tst  t0016.good  t0016.tst  (+13 more)
tests/do_not_trim_selection/: data2  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst
tests/elementary_moves/: t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.in  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.in  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst  t0009.good  t0009.tst
tests/first_last/: data1  t0001.good  t0001.tst  t0002.good  t0002.tst
tests/force_first/: data1  data2  t0001.good  t0001.tst  t0002.good  t0002.tst
tests/force_last/: t0001.good  t0001.tst  t0002.good  t0002.tst
tests/full_width/: data1  t0001.good  t0001.tst  t0002.good  t0002.tst
tests/gutter/: data2  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst
tests/ignored_input/: data1  data2  data3  data4  data5  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst
tests/in-ex-clusions/: data1  data2  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst
tests/initial_selection/: data1  data2  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst  t0009.good  t0009.tst  t0010.good  t0010.tst  t0011.good  t0011.tst  t0012.good  t0012.tst
tests/invalid_char/: data1  data2  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst
tests/line_mode/: data3  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst
tests/line_separators/: data1  t0001.good  t0001.tst
tests/long_lines/: t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst
tests/long_words/: data1  data2  data3  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst
tests/message/: data2  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst  t0009.good  t0009.tst
tests/misc/: data2  data3  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst
tests/non_printable/: data1  t0001.good  t0001.tst  t0002.good  t0002.tst
tests/rows_cols_in-ex-clusions/: data1  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.tst  t0004.good  t0004.tst
tests/scrolling/: data2  data3  data4  data5  data6  data7  t0001.good  t0001.tst  t0002.good  t0002.tst  t0003.good  t0003.in  t0003.tst  t0004.good  t0004.tst  t0005.good  t0005.tst  t0006.good  t0006.tst  t0007.good  t0007.tst  t0008.good  t0008.tst  t0009.good  t0009.tst  t0010.good  t0010.tst  t0011.good  (+1 more)
منصةشليلة/: COPYRIGHT
(+300 files in other folders)
